add bookstore starters

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <script type="text/javascript" src="helpers.js"></script>
   <script type="text/javascript" src="stopwatch.js"></script>
   <script type="text/javascript" src="todos.js"></script>
+  <script type="text/javascript" src="books.js"></script>
   <script type="text/javascript" src="bookstore.js"></script>
 </body>
 </html>
